# m5-forecasting

./: .gitignore  README.md  model_card_lgbm.md  pyproject.toml
src/: data.py  evaluation.py  features.py  predtest.py  run_backtest.py  run_sliced_eval.py  slicing.py
src/debug/: modeldebug.py  predtest.py  simplemodeldebug.py
src/m5_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: lgbm.py  naive.py
