[project]
name = "m5-forecasting"
version = "0.1.0"
description = "M5 forecasting baseline (LightGBM) with reproducible pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=15.0",          # parquet read/write + faster IO
  "lightgbm>=4.3",
  "scikit-learn>=1.4",      # metrics + utilities
  "tyro>=0.8",              # CLI parsing
  "matplotlib>=3.8",        # basic plots
  "tqdm>=4.66",
  "kaggle>=1.6"     
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
